--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,14 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.name-wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: left;
+  gap: 1rem;
+}
+
 .form-wrapper {
   display: flex;
   flex-direction: column;
