--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,3 +81,28 @@ input {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+/* room css */
+
+.message-box {
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+  height: 80vh;
+  border: 2px solid black;
+  border-radius: 0.2rem;
+}
+
+.messages {
+  flex: 1;
+  width: 100%;
+  overflow-y: scroll;
+}
+
+h2 {
+  text-align: center;
+}
+
+#message {
+  flex: 1;
+}
