--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,12 +41,12 @@
 }
 
 .create-btn,
-.join-btn {
+.join-btn,
+#send-btn {
   display: flex;
   align-items: center;
   justify-content: center;
 
-  width: 100%;
   padding: 1rem;
   border: none;
   border-radius: 0.2rem;
@@ -60,7 +60,8 @@
 }
 
 .create-btn:hover,
-.join-btn:hover {
+.join-btn:hover,
+#send-btn:hover {
   background-color: aquamarine;
 }
 
@@ -84,13 +85,19 @@ input {
 
 /* room css */
 
-.message-box {
+.message-wrapper {
   display: flex;
   flex-direction: column;
   width: 80vw;
   height: 80vh;
   border: 2px solid black;
   border-radius: 0.2rem;
+  align-items: stretch;
+}
+
+.inputs {
+  display: flex;
+  gap: 1rem;
 }
 
 .messages {
@@ -103,6 +110,26 @@ h2 {
   text-align: center;
 }
 
+.inputs {
+  display: flex;
+  padding: 10px;
+}
+
 #message {
   flex: 1;
+}
+
+.text {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: black;
+}
+
+.muted {
+  font-size: 10px;
+  color: darkgray;
 }
