--- a/templates/room.html
+++ b/templates/room.html
@@ -15,11 +15,32 @@
     </button>
   </div>
 </div>
+
 <script type="text/javascript">
   let socketio = io();
 
+  const messages = document.getElementById("messages");
+
+  const createMessage = (name, msg) => {
+    const content = `
+        <div class="text">
+            <span> <strong> ${name} </strong>: ${msg} </span>
+            <span class="muted"> ${new Date().toLocaleString()} </span>
+        </div>
+    `;
+    messages.innerHTML += content;
+  };
+
+  socketio.on("message", (data) => {
+    createMessage(data.name, data.message);
+  });
+
   const sendMessage = () => {
-    console.log(`Sent`);
+    console.log(`Sent a message`);
+    let message = document.getElementById("message");
+    if (message.value === "") return;
+    socketio.emit("message", { data: message.value });
+    message.value = "";
   };
 </script>
 {% endblock %}
